# amos

./: .gitignore  CONTRIBUTING.md  DCO.md  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_amos.py
docs/: design-spec.md  developer-guide.md  mirror-agent-demo-spec.md  roadmap.md  v1-local-contract.md  v1-verification.md
examples/: mirror_agent_demo.py  mirror_agent_ui.py
migrations/postgres/: 001_initial.sql
migrations/sqlite/: 001_initial.sql
schemas/: access_policy.schema.json  agentic_recall.schema.json  association_edge.schema.json  core_payloads.schema.json  deletion_and_capacity.schema.json  event_journal_entry.schema.json  evidence_record.schema.json  memory_atom.schema.json  memory_frame.schema.json  memory_frame_request.schema.json  memory_packet.schema.json  memory_packet_request.schema.json  memory_page.schema.json  memory_page_request.schema.json  scope.schema.json  self_awareness_atoms.schema.json  shared_memory_view.schema.json  smp_output.schema.json  source_event.schema.json
src/amos/: __init__.py  _service_support.py  access_service.py  capacity_service.py  cli.py  diagnostics_service.py  errors.py  graph_service.py  http_api.py  index_service.py  maintenance.py  mutations_service.py  ontology.py  policy_service.py  (+10 more)
tests/: __init__.py  conftest.py  helpers.py  test_amos_v1.py  test_architecture.py  test_benchmark.py  test_cli_http.py  test_maintenance.py  test_mirror_agent_demo.py  test_policy_and_capacity.py  test_processor_packs.py  test_reasoning_frames.py  test_retrieval.py  test_schema_and_mutations.py  test_self_models.py
